<resources>
    <string name="app_name">AircraftWar-App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="easy">简单模式</string>
    <string name="medium">普通模式</string>
    <string name="backgroundMusicChoice">音效</string>
    <string name="hard">困难模式</string>
    <string name="gameLevelSoundConfig">选择游戏难度和音效</string>
    <string name="SoundEffect">音效</string>
    <string name="welcome_sign">欢迎来到飞机大战</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="visitor">游客</string>
    <string name="login_sign">登录游戏</string>
    <string name="user_name">用户名</string>
    <string name="confirm">确定</string>
    <string name="user_password">密码</string>
    <string name="back">返回</string>
    <string name="signup_label">注册账号</string>
    <string name="prop_store_button_sign">道具商城</string>
    <string name="propstore_sign">道具</string>
    <string name="online_btn_sign">联机模式</string>
    <string name="standalone_btn_sign">单机模式</string>
    <string name="begingame_sign">游戏</string>
    <string name="user_info_todo">user info todo</string>

    <string name="ranklist">排行榜</string>
    <string name="pwd_again_sign">确认密码</string>
    <string name="test1">11</string>
    <string name="logout">注销</string>
    <string name="matching_sign">匹配中，请稍后...</string>
</resources>